2022-09-29T08:12:01Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3149670520
* notice: last 14d: unq all: 5 5649
* notice: prev accum: outdated-unq outdated-all / unq all: 1063 65723 / 1101 71417
* notice: next accum: outdated-unq outdated-all / unq all: 1063 65723 / 1102 71372
* notice: prev exec diff / last date diff / accum: unq all: +2 +134 -1 -179 / +2 +134 -0 -0 / 2 134
* notice: removed / changed dates: [] / [2022-09-15 2022-09-29]

2022-09-29T00:47:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3147873456
* notice: last 14d: unq all: 5 5694
* notice: prev accum: outdated-unq outdated-all / unq all: 1060 65315 / 1100 70944
* notice: next accum: outdated-unq outdated-all / unq all: 1063 65723 / 1101 71417
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -17 / +3 +405 -0 -0 / 3 405
* notice: removed / changed dates: [2022-09-14] / [2022-09-15 2022-09-28]

2022-09-28T16:13:53Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3145160993
* notice: last 14d: unq all: 5 5629
* notice: prev accum: outdated-unq outdated-all / unq all: 1060 65315 / 1100 70971
* notice: next accum: outdated-unq outdated-all / unq all: 1060 65315 / 1100 70944
* notice: prev exec diff / last date diff / accum: unq all: +0 +119 -0 -146 / +3 +257 -0 -0 / 3 257
* notice: removed / changed dates: [] / [2022-09-14 2022-09-28]

2022-09-28T08:11:30Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3141871885
* notice: last 14d: unq all: 5 5656
* notice: prev accum: outdated-unq outdated-all / unq all: 1060 65315 / 1098 71008
* notice: next accum: outdated-unq outdated-all / unq all: 1060 65315 / 1100 70971
* notice: prev exec diff / last date diff / accum: unq all: +3 +139 -1 -176 / +3 +138 -0 -0 / 3 138