@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-29T08:12:01Z",
-  "count" : 213,
-  "count_minmax" : [ 138, 409 ],
-  "count_decinc" : [ -196, +409 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -1, +3 ]
+  "timestamp" : "2022-09-29T16:11:45Z",
+  "count" : 66,
+  "count_minmax" : [ 66, 409 ],
+  "count_decinc" : [ -343, +409 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -2, +3 ]
 }
