@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-09-29T08:12:01Z",
+  "timestamp" : "2022-09-29T16:11:45Z",
   "count_outdated" : 65723,
   "uniques_outdated" : 1063,
-  "count" : 71372,
-  "uniques" : 1102,
+  "count" : 71348,
+  "uniques" : 1101,
   "clones" : [
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 213,
-      "count_minmax": [ 138, 409 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ]
+      "count": 66,
+      "count_minmax": [ 66, 409 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 3 ]
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 134,
-      "count_minmax": [ 134, 134 ],
+      "count": 257,
+      "count_minmax": [ 134, 257 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
