@@ -1,11 +1,11 @@
 {
-  "count": 5649,
+  "count": 5625,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 213,
-      "uniques": 2
+      "count": 66,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 134,
+      "count": 257,
       "uniques": 2
     }
   ]
