@@ -1,3 +1,11 @@
+2022-09-29T16:11:45Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3152880619
+* notice: last 14d: unq all: 5 5625
+* notice: prev accum: outdated-unq outdated-all / unq all: 1063 65723 / 1102 71372
+* notice: next accum: outdated-unq outdated-all / unq all: 1063 65723 / 1101 71348
+* notice: prev exec diff / last date diff / accum: unq all: +0 +123 -1 -147 / +2 +257 -0 -0 / 2 257
+* notice: removed / changed dates: [] / [2022-09-15 2022-09-29]
+
 2022-09-29T08:12:01Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3149670520
 * notice: last 14d: unq all: 5 5649
